# esp32-s3-iot-ble-novice

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  custom_partitions_two_ota.csv  partitions-16MiB.csv  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/hw_iot_mqtt/: hw_iot_mqtt.c  hw_iot_mqtt_ota.c  hw_iot_mqtt_ota.h  hw_iot_mqtt_topic.c  hw_iot_mqtt_topic.h  mqtt_config.c
components/BSP/hw_iot_mqtt/protocol/hw_iot/: hw_iot_json.c  hw_iot_protocol.c
components/BSP/hw_iot_mqtt/protocol/mqtt/: mqtt_config.c
components/BSP/hw_iot_mqtt/protocol/mqtt/json/: json_util.c
components/driver/wifi/: wifi.c  wifi.h
components/network/: CMakeLists.txt  Kconfig  README.md
components/protocol/: CMakeLists.txt  Kconfig  README.md
components/protocol/hw_iot/: CMakeLists.txt  hw_iot_topic.c  hw_iot_topic.h
components/protocol/hw_iot_mqtt/: CMakeLists.txt  hw_iot_mqtt_client.c  hw_iot_mqtt_client.h  hw_iot_mqtt_config.c  hw_iot_mqtt_config.h  hw_iot_mqtt_json.c  hw_iot_mqtt_json.h  hw_iot_mqtt_publish.c  hw_iot_mqtt_publish.h  hw_iot_mqtt_subscribe.c  hw_iot_mqtt_subscribe.h  hw_iot_mqtt_topic.c  hw_iot_mqtt_topic.h
components/protocol/mqtt/: CMakeLists.txt  mqtt_config.c  mqtt_config.h
components/service/: CMakeLists.txt
docs/: FreeRTOS实战教程.md  JSON 生成指南.md  Kconfig 配置指南.md  PEM 证书配置指南.md  README.md  cJSON 使用指南.md  cjson.md  华为云IoT OTA指南.md  华为云IoT OTA配置指南.md  华为云Iot OTA指南.md  华为云MQTT协议组件设计指南.md  已实现功能.md  待实现功能.md  项目层级结构.md
main/: CMakeLists.txt  HW_IOT_USAGE_GUIDE.md  HW_IOT_WORK_DECISIONS.md  README.md  cjson.md  hw_iot_mqtt.c  hw_iot_mqtt.h  hw_iot_mqtt_json.c  hw_iot_mqtt_json.h  hw_iot_mqtt_topic.c  hw_iot_mqtt_topic.h  main.c  mqtt_hw_iot.c  mqtt_hw_iot.h  mqtt_hw_iot_command_receive.c  mqtt_hw_iot_command_receive.h  mqtt_hw_iot_message_report.c  mqtt_hw_iot_message_report.h  mqtt_hw_iot_message_up.c  mqtt_hw_iot_message_up.h  wifi.c  wifi.h
(+6 files in other folders)
